Fixed effects and preconditions for non-conditional learning!

--- a/Master.tex
+++ b/Master.tex
@@ -84,35 +84,39 @@
 % Symbol for a binding connection
 \newcommand{\bc}{\bullet}
 % Symbol for atoms
-\newcommand{\atoms}{\mathbb{A}}
+\newcommand{\atoms}{\ensuremath{\mathbb{A}}}
 
-\newcommand{\lits}{\mathbb{L}}
+\newcommand{\lits}{\ensuremath{\mathbb{L}}}
 % Symbol for predicates
-\newcommand{\preds}{\mathbb{P}}
+\newcommand{\preds}{\ensuremath{\mathbb{P}}}
 % Symbol for goal
-\newcommand{\goal}{\mathcal{G}}
+\newcommand{\goal}{\ensuremath{\mathcal{G}}}
 % Symbol for domain
-\newcommand{\dom}{\mathcal{D}}
+\newcommand{\dom}{\ensuremath{\mathcal{D}}}
 
 %symbol for disproven
-\newcommand{\dsp}{d}
-\newcommand{\Dsp}{D}
+\newcommand{\dsp}{\ensuremath{d}}
+\newcommand{\Dsp}{\ensuremath{D}}
 
 %symbol for proven
-\newcommand{\pro}{k}
-\newcommand{\Pro}{K}
+\newcommand{\pro}{\ensuremath{k}}
+\newcommand{\Pro}{\ensuremath{K}}
 
 %symbbol for unproven
-\newcommand{\up}{u}
-\newcommand{\Up}{U}
+\newcommand{\up}{\ensuremath{u}}
+\newcommand{\Up}{\ensuremath{U}}
 
 %symbol for candidate
-\newcommand{\cand}{c}
-\newcommand{\Cand}{C}
+\newcommand{\cand}{\ensuremath{c}}
+\newcommand{\Cand}{\ensuremath{C}}
 
-\newcommand{\objs}{\mathcal{O}}
+\newcommand{\objs}{\ensuremath{\mathcal{O}}}
 
-\newcommand{\cset}{\mathcal{C}}
+\newcommand{\cset}{\ensuremath{\mathcal{C}}}
+
+\newcommand{\ground}{\ensuremath{ground}}
+
+\newcommand{\invground}{\ensuremath{\ground ^{-1} }}
 
 
 \begin{document}
