--- a/NonConditional/Preconditions.tex
+++ b/NonConditional/Preconditions.tex
@@ -1,5 +1,6 @@
-\documentclass[../Master.tex]{subfiles}
 \providecommand{\master}{..}
+\documentclass[../Master.tex]{subfiles}
+
 \begin{document}
 
 \begin{figure}
@@ -12,18 +13,18 @@ We will now consider the problem of learning the preconditions of an action sche
 
 In~\cite{Walsh2008}, the authors suggest maintaining a set of all possible conjunctions of $k$ or less predicates (where $k$ is the maximal number of predicates allowed in action schema preconditions), and --- on action failure --- marking the conjunctions predicting that the action would have succeeded as disproven.
 
-We propose a solution where individual predicates are proven and disproven to be preconditions based on the following observations:
+We propose a solution where individual atoms are proven and disproven to be preconditions based on the following observations:
 \begin{itemize}
-    \item When $a$ succeeds, there are predicates which, if they had been preconditions, would have caused failure. These can be immediately disproven to be preconditions.
-    \item When $a$ fails, there are a number of predicates which could be responsible for the failure if they are preconditions. Although it is indeterminable which of them are preconditions and which are not, this information can be saved and analysed later, when more information is available.
+    \item When $a$ succeeds, there are atoms which, if they had been preconditions, would have caused failure. These can be immediately disproven to be preconditions.
+    \item When $a$ fails, there are a number of atoms which could be responsible for the failure if they are preconditions. Although it is indeterminable which of them are preconditions and which are not, this information can be saved and analysed later, when more information is available.
 \end{itemize}
 
-In the following we will analyse how the aforementioned predicate sets can be deduced from a single state transition, and later discuss how knowledge obtained from earlier state transitions can be used to prove predicates to be preconditions.
+In the following we will analyse how the aforementioned atom sets can be deduced from a single state transition, and later discuss how knowledge obtained from earlier state transitions can be used to prove atoms to be preconditions.
 
 \begin{example}[Sokoban example]\label{ex:ncp:sokobanSetup}
     As a running example, we will once again use the sokoban domain, where the environment starts in the following state (visualized in figure~\ref{fig:sokoSmall}):
     \begin{equation*}
-        s_0 =
+        S_0 =
         \left\{
             \begin{gathered}
                 \texttt{sokobanAt}(t_3), \texttt{at}(b, t_2), \texttt{goal}(t_1), \\
@@ -39,16 +40,16 @@ In the following we will analyse how the aforementioned predicate sets can be de
     From this state, we will analyse the outcomes of different applications of the \texttt{move-h} action (presented in Section~\ref{sec:SokobanPDDL}), whose preconditions are reprinted below:
 
     \begin{align*}
-        Pre_{\texttt{move-h}}^+ &= \left\{
-            \texttt{sokobanAt}(from), \texttt{clear}(to), \texttt{hAdj}(from, to)
-            \right\} \\
+        Pre_{\texttt{move-h}}^+ &= 
+            \texttt{sokobanAt}(from) \land \texttt{clear}(to) \land \texttt{hAdj}(from, to)
+             \\
         Pre_{\texttt{move-h}}^- &= \emptyset
     \end{align*}
 
-    As can be seen, there is only one applicable \texttt{move-h} action in state $s_0$, namely $\texttt{move-h}(t_3,t_4)$. As the agent is unaware of this fact, it may apply other $\texttt{move-h}$ actions, which will all fail. The only information available to it is that both the positive and negative preconditions are subsets of $\mathbb{P}_{\texttt{move-h}}$, since no other predicate can be a precondition due to the scoping rule.
+    As can be seen, there is only one applicable \texttt{move-h} action in state $S_0$, namely $\texttt{move-h}(t_3,t_4)$. As the agent is unaware of this fact, it may apply other $\texttt{move-h}$ actions, which will all fail. The only information available to it is that both the positive and negative preconditions are subsets of $\lits_{\texttt{move-h}}$, since no other atom can be a precondition due to the scoping rule.
 
     \begin{equation*}
-    \mathbb{P}_{\texttt{move-h}} =
+    \lits_{\texttt{move-h}} =
     \left\{
         \begin{gathered}
             \texttt{sokobanAt}(to), \texttt{sokobanAt}(from), \\
