--- a/NonConditional/Preconditions/PriorKnowledge.tex
+++ b/NonConditional/Preconditions/PriorKnowledge.tex
@@ -1,65 +1,66 @@
-\documentclass[../../Master.tex]{subfiles}
+\providecommand{\master}{../..}
+\documentclass[\master/Master.tex]{subfiles}
 \begin{document}
 
-We will now present an algorithm (see Algorithm~\ref{algo:precondLearn}) for obtaining knowledge about preconditions from a series of state transitions. The algorithm takes as input a state transition $(s, a, s')$ as well as prior knowledge about the action schema for $a$, consisting of the following:
+We will now present an algorithm (see Algorithm~\ref{algo:precondLearn}) for obtaining knowledge about preconditions from a series of state transitions. The algorithm takes as input a state transition $(S, a, S')$ as well as prior knowledge about the action schema for $a$, consisting of the following:
 
 \begin{itemize}
-    \item A set $K$ containing fluent predicates proven to be prconditions.
-	\item A set $D$ containing fluent predicates \emph{disproven} to be preconditions.
-    \item A set $C$ containing candidate sets, each satisfying the invariant in~\eqref{eq:inv}.
+    \item A set \Pro containing literals proven to be prconditions.
+	\item A set \Dsp containing literals \emph{disproven} to be preconditions.
+    \item A set \cset containing candidate sets, each satisfying the invariant in~\eqref{eq:inv}.
 \end{itemize}
 
-On action success, the sets of predicates that can be disproven to be preconditions based on this transition is calculated using~\eqref{eq:DPlusTrans} and~\eqref{eq:DMinusTrans}, and added to the existing knowledge:
+On action success, the sets of literals that can be disproven to be preconditions based on this transition is calculated using~\eqref{eq:DPlusTrans} and~\eqref{eq:DMinusTrans}, and added to the existing knowledge:
 
 \begin{equation*}
-    D = D \cup d^+(s)\}
+    \Dsp = \Dsp \cup \dsp^+(s)
 \end{equation*}
 
-On action failure, the candidate sets are determined using~\eqref{eq:cPlus} and~\eqref{eq:cMinus}, and are added to the set $C$.
+On action failure, the candidate sets are determined using~\eqref{eq:cPlus} and~\eqref{eq:cMinus}, and are added to the set $\cset$.
 
-It now holds that either more predicates have been disproven, or one more candidate set have been added to $C$. According to Theorem~\ref{th:invHolds}, each candidate set in $C$ can now be reduced by removing disproven predicates, while maintaining Invariant~\eqref{eq:inv}:
+It now holds that either more literals have been disproven, or one more candidate set have been added to $\cset$. According to Theorem~\ref{th:invHolds}, each candidate set in $\cset$ can now be reduced by removing disproven literals, while maintaining Invariant~\eqref{eq:inv}:
 
 \begin{equation} \label{reduceCands}
-    C = \left\{ c \setminus D \; | \; c \in C \right\}
+    \cset = \left\{ c \setminus \Dsp \; | \; c \in \Cand \right\}
 \end{equation}
 
 By Proposition~\ref{prop:ncp:precond-holds}, members of any singleton candidate set can now be added to the proven knowledge:
 
 \begin{equation} \label{eq:extractKnown}
-    K = K \cup \left\{ p \; | \; \{ p \} \in C \right\}
+    \Pro = \Pro \cup \left\{ p \; | \; \{ p \} \in \cset \right\}
 \end{equation}
 
-As discussed previously, any candidate set containing a predicate which have already been proven to be a precondition can be safely removed from $C$, as no more knowledge can be obtained from it, formally:
+As discussed previously, any candidate set containing a literal which have already been proven to be a precondition can be safely removed from $\cset$, as no more knowledge can be obtained from it, formally:
 
 \begin{equation} \label{eq:removeKnown}
-    C = \left\{ c \; | \; c \in C \land c \cap K \neq \emptyset \right\}
+    \cset = \left\{ c \; | \; c \in \Cand \land c \cap \Pro \neq \emptyset \right\}
 \end{equation}
 
 \begin{algorithm}
     \caption{Algorithm for learning preconditions}\label{algo:precondLearn}
     \begin{algorithmic}
-        \Function {$\textsc{Precond-learn}$} {$\left( s, a, s'\right)$, $D$, $K$, $C$}
-            \If {$s' \neq s$}
-                \State $C \gets C \cup \{ c(s) \}$
-            \ElsIf {$s' = s$}
-                \State $D \gets D \cup d(s)$
+        \Function {$\textsc{Precond-learn}$} {$\left(S, a, S'\right)$, \Dsp, \Pro, \cset}
+            \If {$S' = S$}
+                \State $\cset \gets \cset \cup \{ \cand(S) \}$
+            \ElsIf {$S' \neq  S$}
+                \State $\Dsp \gets \Dsp \cup d(S)$
             \EndIf
 
-            \State Reduce candidate sets by removing predicates disproven to preconditions:
-            \State $C' \gets \left\{ c \setminus D \; | \; c \in C' \right\}$
+            \State Reduce candidate sets by removing literals disproven to preconditions:
+            \State $\cset' \gets \left\{ c \setminus \Dsp \; | \; c \in \cset \right\}$
 
-            \State Add singleton sets from $C$ to $K$:
-            \State $K' \gets K \cup \left\{ p \; | \; \{ p \} \in C' \right\}$
+            \State Add singleton sets from $\cset'$ to \Pro:
+            \State $\Pro' \gets K \cup \left\{ p \; | \; \{ p \} \in \cset \right\}$
 
-            \State Remove candidate sets containing predicates proven to be preconditions:
-            \State $C' \gets \left\{ c \; | \; c \in C' \land c \cap K \neq \emptyset \right\}$
-            % \State Remove disproven predicates from candidates
+            \State Remove candidate sets containing literals proven to be preconditions:
+            \State $\cset'' \gets \left\{ c \; | \; c \in \cset' \land c \cap \Pro \neq \emptyset \right\}$
+            % \State Remove disproven literals from candidates
             % \Comment \emph{see \eqref{reduceCands}}
             % \State $K^\pm \gets \left\{ \textnormal{singleton sets from } C\right\}$ $\cup K^\pm$
             % \Comment \emph{see \eqref{eq:extractKnown}}
-            % \State Remove candidate sets from $C$ which contain a predicate in $K^\pm$
+            % \State Remove candidate sets from $C$ which contain a literal in $K^\pm$
             % \Comment \emph{see \eqref{eq:removeKnown}}
-            \State \Return $(K', D', C')$
+            \State \Return $(\Pro', \Dsp', \cset'')$
         \EndFunction%
     \end{algorithmic}
 \end{algorithm}
