--- a/NonConditional/Preconditions/Transition.tex
+++ b/NonConditional/Preconditions/Transition.tex
@@ -1,34 +1,35 @@
-\documentclass[../../Master.tex]{subfiles}
+\providecommand{\master}{../..}
+\documentclass[\master/Master.tex]{subfiles}
 \begin{document}
 
 \subsubsection*{Action success}
-When an action $a$ applied to a state $s$ yields a state different from $s$ (such that $\gamma (s, a) \neq s$), then the action application was successful, and none of $A$'s preconditions were violated by $s$, meaning that
+When an action $a$ applied to a state $S$ yields a state different from $S$ (such that $\gamma (S, a) \neq S$), then the action application was successful, and none of $A$'s preconditions were violated by $S$, meaning that
 
-        \[ g\left[Pre^+\right] \subseteq s_t \land
-            g\left[Pre^-\right] \subseteq \mathbb{P} \setminus s_t
+        \[ \ground\left[Pre^+\right] \subseteq S_t \land
+            \ground\left[Pre^-\right] \subseteq \lits \setminus S_t
         \]
-ie. the grounding of any positive precondition will yield a predicate in $s$, and the grounding of any negative precondition yields a predicate which is not in $s$.
-It follows trivially that any predicate $p \in \mathbb{P}$ for which $g(p) \notin s_t$ can not be a positive precondition, as that would have caused the action to fail. Similarly, if $g(p) \in s_t$, then $p$ can not be a negative precondition. The sets of ungrounded predicates that can be disproven to be positive (resp. negative) preconditions are thus:
+ie. the grounding of any positive precondition will yield an atom in $S$, and the grounding of any negative precondition yields a grounded atom which is not in $S$.
+It follows trivially that any atom $p \in \lits$ for which $ \ground(p) \notin S_t$ can not be a positive precondition, as that would have caused the action to fail. Similarly, if $\ground(p) \in S_t$, then $p$ can not be a negative precondition. The sets of atoms that can be disproven to be positive (resp. negative) preconditions are thus:
 
 \begin{equation*} \label{eq:DPlusTrans}
-    d^+ (s) = \left\{ x \; | \; x \in \mathbb{P} \land g(x) \notin s \right\}
+    \dsp^+ (S) = \left\{ x \; | \; x \in \lits \land \ground(x) \notin s \right\}
 \end{equation*}
 
 \begin{equation*} \label{eq:DMinusTrans}
-    d^- (s) = \left\{ x \; | \; x \in \mathbb{P} \land g(x) \in s \right\}
+    \dsp^- (S) = \left\{ x \; | \; x \in \lits \land \ground(x) \in s \right\}
 \end{equation*}
 
-As a convienence, $d(s)$ denotes the union of $d^+(s)$ and $d^-(s)$, where predicates from the latter are negated:
+As a convienence, $\dsp(S)$ denotes the union of $\dsp^+(S)$ and $\dsp^-(S)$, where atoms from the latter are negated:
 
 \begin{equation*}
-    d(s) = d^+ (s) \cup \left\{ \neg p \; | \; p \in d^-(s) \right\}
+    \dsp(S) = \dsp^+ (S) \cup \left\{ \neg p \; | \; p \in \dsp^-(S) \right\}
 \end{equation*}
 
 \begin{example}[\texttt{move-h} action succeeded] \label{ex:moveSucceeded}
-    In case the sokoban agent applies the action $\texttt{move-h}(t_3, t_4)$ in state $s_0$, the resulting state $s_1$ will have the visible effect that the sokoban relocated from $t_3$ to $t_4$. To determine which predicates could not have caused the failure, predicates in $\mathbb{P}_{\texttt{move-h}}$ are grounded and their membership in $s_0$ is checked. For example, $g \left( \texttt{clear}(to) \right) = \texttt{clear}\left( t_4 \right)$ is in $s_0$, which means that $\texttt{clear}(to)$ can not be a negative precondition. Proceeding in this manner yields the following results:
+    In case the sokoban agent applies the action $\texttt{move-h}(t_3, t_4)$ in state $S_0$, the resulting state $S_1$ will have the visible effect that the sokoban relocated from $t_3$ to $t_4$. To determine which atoms could not have caused the failure, literals in $\lits_{\texttt{move-h}}$ are grounded and their membership in $S_0$ is checked. For example, $\ground \left( \texttt{clear}(to) \right) = \texttt{clear}\left( t_4 \right)$ is in $S_0$, which means that $\texttt{clear}(to)$ can not be a negative precondition. Proceeding in this manner yields the following results:
 
     \begin{equation*}
-        d^+(s_0) = \left\{
+        \dsp^+(S_0) = \left\{
             \begin{gathered}
                 \texttt{sokobanAt}(to), \texttt{clear}(from), \\
                 \texttt{vAdj}(from, to), \texttt{vAdj}(to, from), \\
@@ -41,7 +42,7 @@ As a convienence, $d(s)$ denotes the union of $d^+(s)$ and $d^-(s)$, where predi
     \end{equation*}
 
     \begin{equation*}
-        d^-(s_0) = \left\{
+        \dsp^-(S_0) = \left\{
             \begin{gathered}
                 \texttt{sokobanAt}(from), \texttt{clear}(to), \\
                 \texttt{hAdj}(from, to), \texttt{hAdj}(to, from)
@@ -53,51 +54,51 @@ As a convienence, $d(s)$ denotes the union of $d^+(s)$ and $d^-(s)$, where predi
 \end{example}
 
 \subsubsection*{Action failure}
-In case of action failure, at least one of $A$'s preconditions were not satisfied by $s$, but there is no indication from the environment on which predicate(s) violated a precondition by their presence in or absence from $s$. However, it is certain that either a negative precondition was violated by a predicate $p \in s$, or a positive precondition was violated by a predicate absent from $s$. The predicates that would have caused the failure if part of $Pre^+$ (resp. $Pre^-$) are called the positive (resp. negative) candidates and can be determined as follows:
+In case of action failure, at least one of $A$'s preconditions were not satisfied by $S$, but there is no indication from the environment on which atomli(s) violated a precondition by their presence in or absence from $S$. However, it is certain that either a negative precondition was violated by a grounded atom $p \in s$, or a positive precondition was violated by a grounded atomli absent from $S$. The atoms that would have caused the failure if part of $Pre^+$ (resp. $Pre^-$) are called the positive (resp. negative) candidates and can be determined as follows:
 
 \begin{equation} \label{eq:cPlus}
-    c^+(s) = \left\{ x \; | \; x \in \mathbb{P} \land g(x) \notin s \right\}
+    \cand^+(S) = \left\{ x \; | \; x \in \lits \land \ground(x) \notin s \right\}
 \end{equation}
 \begin{equation} \label{eq:cMinus}
-    c^-(s) = \left\{ x \; | \; x \in \mathbb{P} \land g(x) \in s \right\}
+    \cand^-(S) = \left\{ x \; | \; x \in \lits \land \ground(x) \in s \right\}
 \end{equation}
 
-As for disproven candidates, $c(s)$ denotes the union of $c^+(s)$ and $c^-(s)$ where predicates in $c^-(s)$ are negated.
+As for disproven candidates, $\cand(S)$ denotes the union of $\cand^+(S)$ and $\cand^-(S)$ where atoms in $\cand^-(S)$ are negated.
 
 \begin{equation}
-    c(s) = c^+(s) \cup \left\{ \neg p \; | \; p \in c^-(s) \right\}
+    \cand(S) = \cand^+(S) \cup \left\{ \neg p \; | \; p \in \cand^-(S) \right\}
 \end{equation}
 
-Since the action failed, it holds trivially that \textit{some} predicates in $c^+(s)$ or $c^-(s)$ (or both) are preconditions, ie.
+Since the action failed, it holds trivially that \textit{some} atoms in $\cand^+(S)$ or $\cand^-(S)$ (or both) are preconditions, ie.
 
 \begin{equation} \label{eq:inv}
-    \left| c(s) \cap Pre \right| \geq 1
+    \left| \cand(S) \cap Pre \right| \geq 1
 \end{equation}
 
-This is an important invariant; if the sets $c^+$ and $c^-$ can be reduced such that only one predicate remain in $c^+ \cup c^-$ while \eqref{eq:inv} is maintained, then that predicate is proven to be a precondition (negative or positive, depending on whether it was a member of $c^+$ or $c^-$). Formally,
+This is an important invariant; if the sets $\cand^+$ and $\cand^-$ can be reduced such that only one atom remain in $\cand^+ \cup \cand^-$ while \eqref{eq:inv} is maintained, then that atom is proven to be a precondition (negative or positive, depending on whether it was a member of $\cand^+$ or $\cand^-$). Formally,
 
 \begin{proposition} \label{prop:ncp:precond-holds}
-    If \eqref{eq:inv} holds for $c(s) = \{p\}$, then $p$ is a precondition.
+    If \eqref{eq:inv} holds for $\cand(S) = \{p\}$, then $p$ is a precondition.
 \end{proposition}
 
 \begin{proof}
-    If invariant \eqref{eq:inv} holds for $c^+$ and $c^-$, then there is at least one predicate in $c^+$ that is a positive precondition, or at least one predicate in $c^-$ that is a negative precondition. If $c^+$ contains only one predicate while $c^-$ contains none, then the single element in $c^+$ must be a positive precondition. A similar argument applies when $c^-$ is the singleton set and $c^+$ is empty.
+    If invariant \eqref{eq:inv} holds for $\cand^+$ and $\cand^-$, then there is at least one atom in $\cand^+$ that is a positive precondition, or at least one atom in $\cand^-$ that is a negative precondition. If $\cand^+$ contains only one atom while $\cand^-$ contains none, then the single element in $\cand^+$ must be a positive precondition. A similar argument applies when $\cand^-$ is the singleton set and $\cand^+$ is empty.
 \end{proof}
 
-It is clear that if a predicate is disproven to be a precondition, then it can not be the precondition that was violated by $s$, and caused the action to fail. As such, it can safely be disregarded as a candidate:
+It is clear that if a atom is disproven to be a precondition, then it can not be the precondition that was violated by $S$, and caused the action to fail. As such, it can safely be disregarded as a candidate:
 
 \begin{theorem} \label{th:invHolds}
-    If invariant \eqref{eq:inv} holds for candidate set $c(s)$, and a predicate $p \in c(s)$ has been disproven to be a precondition, then removal of $p$ from $c(s)$ maintains invariant \eqref{eq:inv}.
+    If invariant \eqref{eq:inv} holds for candidate set $\cand(S)$, and a atom $p \in \cand(S)$ has been disproven to be a precondition, then removal of $p$ from $\cand(S)$ maintains invariant \eqref{eq:inv}.
 \end{theorem}
 
 \begin{proof}
-    If $p \in c(s)$ is disproven to be a precondition, then there is at least one other predicate $q \in c(s)$ that is a precondition for \eqref{eq:inv} to hold. Hence, \eqref{eq:inv} still holds after removal of $p$.
+    If $p \in \cand(S)$ is disproven to be a precondition, then there is at least one other atom $q \in \cand(S)$ that is a precondition for \eqref{eq:inv} to hold. Hence, \eqref{eq:inv} still holds after removal of $p$.
 \end{proof}
 
 \begin{example}[\texttt{move-h} action failed]
-    If the agent decides to move one tile to the left in state $s_0$ (see example \ref{ex:ncp:sokobanSetup}), and appropriately executes the \texttt{move-h}$(t_3, t_2)$ action, it will discover that the new state is exactly the same as the old, and that the action therefore must have failed. The ungrounded predicates that could have caused the failure are then the following:
+    If the agent decides to move one tile to the left in state $S_0$ (see example \ref{ex:ncp:sokobanSetup}), and appropriately executes the \texttt{move-h}$(t_3, t_2)$ action, it will discover that the new state is exactly the same as the old, and that the action therefore must have failed. The atoms that could have caused the failure are then the following:
     \begin{equation*}
-        c^+(s_0) = \left\{
+        \cand^+(S_0) = \left\{
             \begin{gathered}
                 \texttt{sokobanAt}(to), \\
                 \texttt{clear}(to), \texttt{clear}(from), \\
@@ -111,7 +112,7 @@ It is clear that if a predicate is disproven to be a precondition, then it can n
     \end{equation*}
 
     \begin{equation*}
-        c^-(s_0) = \left\{
+        \cand^-(S_0) = \left\{
             \begin{gathered}
                 \texttt{sokobanAt}(from), \\
                 \texttt{hAdj}(from, to), \texttt{hAdj}(to, from)
@@ -119,46 +120,47 @@ It is clear that if a predicate is disproven to be a precondition, then it can n
         \right\}
     \end{equation*}
 
-    Out of these, only \texttt{clear}$(to)$ is a precondition. If the agent has available the knowledge from Example \ref{ex:moveSucceeded}, it can remove $D^+$ from the positive candidates and $D^-$ from the negatives, while --- according to theorem \ref{th:invHolds} --- maintaining invariant \eqref{eq:inv}, yielding
+    Out of these, only \texttt{clear}$(to)$ is a precondition. If the agent has available the knowledge from Example \ref{ex:moveSucceeded}, it can remove $\Dsp^+$ from the positive candidates and $\Dsp^-$ from the negatives, while --- according to theorem \ref{th:invHolds} --- maintaining invariant \eqref{eq:inv}, yielding
 
     \begin{equation}
-        c(s_0) \setminus d(s_0) = \left\{ \texttt{clear}(to) \right\}
+        \cand(S_0) \setminus \dsp(S_0) = \left\{ \texttt{clear}(to) \right\}
     \end{equation}
 
     % \begin{equation*}
-    %     \left( c^+(s_0) \setminus d^+(s_0), c^-(s_0) \setminus d^-(s_0) \right)
+    %     \left( c^+(S_0) \setminus d^+(S_0), c^-(S_0) \setminus d^-(S_0) \right)
     %     = \left( \{\texttt{clear}(to) \}, \emptyset \right)
     % \end{equation*}
 
-    Of all the predicates that could have caused $\texttt{move-h}(t_3, t_2)$ to fail if they had been preconditions, $\texttt{clear}(to)$ is the only one that has not been disproven to be one. Therefore, it must have been what caused the failure, and is proven to be a precondition.
+    Of all the atoms that could have caused $\texttt{move-h}(t_3, t_2)$ to fail if they had been preconditions, $\texttt{clear}(to)$ is the only one that has not been disproven to be one. Therefore, it must have been what caused the failure, and is proven to be a precondition.
 
     \noindent\rule{\textwidth}{1pt}
 \end{example}
 
-While predicates disproven to be preconditions can sefely be removed from the candidate sets, the same does not hold for predicates \emph{proven} to be preconditions:
-If a predicate $p \in c(s)$ is \textit{proven} to be a precondition, then its removal from $c(s)$ could violate \eqref{eq:inv}: If $p$ is the only predicate in $c(s)$ that is a precondition, (such that $c(s) \cap Pre = \{ p \}$), then
+While literals disproven to be preconditions can safely be removed from the candidate sets, the same does not hold for literals that are \emph{proven} to be preconditions:
+If a literal $p \in \cand(S)$ is \textit{proven} to be a precondition, then its removal from $\cand(S)$ could violate \eqref{eq:inv}: 
+If $p$ is the only literal in $\cand(S)$ that is a precondition, (such that $\cand(S) \cap Pre = \{ p \}$), then
 \begin{equation*}
-    \left| c(s) \cap Pre \right| = 0
+    \left| \cand(S) \cap Pre \right| = 0
 \end{equation*}
 
-As a consequence, if $c(s)$ contains more than one precondition, ie. if
+As a consequence, if $\cand(S)$ contains more than one precondition, i.e. if
 
 \begin{equation*}
-    \left| c(s) \cap Pre \right| > 1,
+    \left| \cand(S) \cap Pre \right| > 1,
 \end{equation*}
 
-then $c(s)$ can never be reduced to a singleton set without violating \eqref{eq:inv}. Furthermore, a candidate set containing a predicate proven to be a precondition can never yield more knowledge: If $p$ is retained in $c$, then one of the following cases apply:
+then $\cand(S)$ can never be reduced to a singleton set without violating \eqref{eq:inv}. Furthermore, a candidate set \Cand containing a literal proven to be a precondition can never yield more knowledge: If $p$ is retained in $\Cand$, then one of the following cases apply:
 \begin{itemize}
-    \item $c \cap Pre = \{ p \}$, ie. $p$ is the only predicate in $c$ that is a precondition. Then $c$ could eventually be reduced to the singleton set $\{ p \}$, which does not produce any new knowledge, since $p$ is already known to be a precondition.
+    \item $\Cand \cap Pre = \{ p \}$, i.e. $p$ is the only literal in $\Cand$ that is a precondition. Then $\Cand$ could eventually be reduced to the singleton set $\{ p \}$, which does not produce any new knowledge, since $p$ is already known to be a precondition.
 
-    \item $c \cap Pre > 1$, ie. more than two predicates in $c$ are preconditions of $A$. As mentioned above, $c$ can never be reduced to the singleton set, and no more knowledge can be gained from it.
+    \item $\Cand \cap Pre > 1$, i.e. more than two literal in $\Cand$ are preconditions of $A$. As mentioned above, $\Cand$ can never be reduced to the singleton set, and no more knowledge can be gained from it.
 \end{itemize}
-In both cases, retaining the set $c$ as it is will not provide any new knowledge. Thus, a candidate set can be discarded when one of its members are proven to be present in $Pre^{\pm}$. See example \ref{ex:undisc} for an demonstration of this problem.
+In both cases, retaining the set $\Cand$ as it is will not provide any new knowledge. Thus, a candidate set can be discarded when one of its members are proven to be present in $Pre^{\pm}$. See example \ref{ex:undisc} for an demonstration of this problem.
 
 \begin{example}[Undiscoverable knowledge] \label{ex:undisc}
-    We will now illustrate how the precondition specifying that two tiles must be adjacent for the sokoban to move between them can never be dsicovered.
+    We will now illustrate how the precondition specifying that two tiles must be adjacent for the sokoban to move between them can never be discovered.
 
-    If the agent tries to execute the action $\texttt{move-h}(t_3, t_1)$, it will once again find that the application was unsuccessful, since it is required that the destination tile is horizontally adjacent to the source tile. In this case, the set of positive candidates $c^+(s_1)$ will contain both $\texttt{hAdj}(from, to)$ and $\texttt{hAdj}(to, from)$. Since these are not in $d^+(s_0)$ (from example \ref{ex:moveSucceeded}), the candidates can not be reduced to a singleton set. Furthermore, because of the symmetry of the two predicates, the one will never appear in a state without the other, and if one of them is absent from a state, so is the other. Although $Pre^+$ only contains $\texttt{hAdj}(to, from)$, $\texttt{hAdj}(from, to)$ is an implicit precondition; if is violated in a state, so is $\texttt{hAdj}(from, to)$.
+    If the agent tries to execute the action $\texttt{move-h}(t_3, t_1)$, it will once again find that the application was unsuccessful, since it is required that the destination tile is horizontally adjacent to the source tile. In this case, the set of positive candidates $\Cand^+(S_1)$ will contain both $\texttt{hAdj}(from, to)$ and $\texttt{hAdj}(to, from)$. Since these are not in $\dsp^+(S_0)$ (from example \ref{ex:moveSucceeded}), the candidates can not be reduced to a singleton set. Furthermore, because of the symmetry of the two literals, the one will never appear in a state without the other, and if one of them is absent from a state, so is the other. Although $Pre^+$ only contains $\texttt{hAdj}(to, from)$, $\texttt{hAdj}(from, to)$ is an implicit precondition; if is violated in a state, so is $\texttt{hAdj}(from, to)$.
 
     A consequence of this is that when the adjacency precondition is violated, the candidate set will always contain at least two preconditions, and can as such never be reduced to a singleton set.
 
